--- a/root/index.html
+++ b/root/index.html
@@ -116,6 +116,6 @@
             </div>
         </div>
 
-        <script src="main.js"></script>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
