Fix some small design mistakes & add advanced keyboard controls

--- a/html/projects.html
+++ b/html/projects.html
@@ -18,10 +18,21 @@
     <body>
         <div class="loading-screen"></div>
 
+        <a class="helper default">
+            <svg width="68px" height="68px" viewBox="0 0 68 68" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+                <g id="Group" transform="translate(2 2)">
+                    <path d="M32.8832 48.0986L32.0679 36.6653C32.0679 36.6653 33.4267 21.2895 33.4267 20.1068C33.4267 18.924 33.0191 13.2731 33.0191 13.2731" fill="none" fill-rule="evenodd" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M33.0191 47.9672L41.0361 40.8706L52.1783 31.4086" fill="none" fill-rule="evenodd" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M33.0191 47.9671C33.0191 47.9671 24.8662 42.8419 24.1868 42.0534C23.5074 41.2649 15.4904 32.5914 15.4904 32.5914L15.4904 32.5914L15.4904 32.5914L13.3163 31.2772" fill="none" fill-rule="evenodd" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M33.8344 64C33.8336 63.9996 16.5775 59.6632 16.5775 59.6632L3.39703 45.4702L0 28.386L6.11465 13.6674L16.8493 4.46817L32.7474 0L52.7219 6.83368L64 23.1294L63.8641 43.499L55.983 55.9836L42.8026 62.5544C42.8026 62.5544 33.8352 64.0004 33.8344 64Z" fill="none" fill-rule="evenodd" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
+                </g>
+            </svg>
+        </a>
+
         <header>
-            <div class="text">
+            <a class="text" target="_self" href="../index.html">
                 knyaz.tech
-            </div>
+            </a>
         </header>
 
         <div class="first-wrapper">
@@ -125,5 +136,7 @@
                 <img src="../images/silver.png" loading="lazy">
             </div>
         </div>
+
+        <script src="../scripts/projects.js"></script>
     </body>
 </html>
