Fix mobile for projects and restructure css files

--- a/html/projects.html
+++ b/html/projects.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="../styles/styles.css">
         <link rel="stylesheet" type="text/css" href="../styles/projects.css">
         <link rel="stylesheet" type="text/css" href="../styles/nojs.css" id="nojs">
+        <link rel="stylesheet" type="text/css" href="../styles/mobile.css">
+        <link rel="stylesheet" type="text/css" href="../styles/projects-mobile.css">
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -90,6 +92,8 @@
             </div>
         </div>
 
+        <hr/>
+
         <div class="first-following-wrapper">
             <div class="text-wrapper">
                 <div class="name-wrapper">
@@ -107,7 +111,6 @@
                             <li>Obtained 2nd place on the Artificial Intelligence International Junior Contest 2021. </li>
                             <li>Leaded a team of 3 students, supervised the development of GUI. </li>
                             <li>Gained experience with ML based computer vision techniques and video classification methods. </li>
-                            <li>Developed a novel approach for sign language translation. </li>
                         </ul>
                     </div>
                 </div>
