--- a/html/projects.html
+++ b/html/projects.html
@@ -88,7 +88,7 @@
             </div>
 
             <div class="pic-wrapper">
-                <img src="../images/robocup.png" loading="lazy">
+                <img src="../images/robocup.png">
             </div>
         </div>
 
