--- a/html/projects.html
+++ b/html/projects.html
@@ -6,8 +6,6 @@
         <link rel="stylesheet" type="text/css" href="../styles/styles.css">
         <link rel="stylesheet" type="text/css" href="../styles/projects.css">
         <link rel="stylesheet" type="text/css" href="../styles/nojs.css" id="nojs">
-        <link rel="stylesheet" type="text/css" href="../styles/mobile.css">
-        <link rel="stylesheet" type="text/css" href="../styles/projects-mobile.css">
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -140,6 +138,6 @@
             </div>
         </div>
 
-        <script src="../scripts/projects.js"></script>
+        <script src="../scripts/projects.js" defer></script>
     </body>
 </html>
