--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
         <link rel="stylesheet" type="text/css" href="styles/index.css">
         <link rel="stylesheet" type="text/css" href="styles/nojs.css" id="nojs">
-        <link rel="stylesheet" type="text/css" href="styles/mobile.css">
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -123,6 +122,6 @@
             </div>
         </div>
 
-        <script src="scripts/index.js"></script>
+        <script src="scripts/index.js" defer></script>
     </body>
 </html>
