--- a/html/about.html
+++ b/html/about.html
@@ -31,11 +31,10 @@
                 </div>
                 <div class="intro">
                     <div class="text">
-                        I was born somewhere in <b>[DELETED]</b> on 6 May 2004. That means I'm <span id="age">18</span> years old. 
-                        I've attemped to become great in a great number of different IT related spheres. I've tried computer aided design (even won a city level contest in 7th grade),
-                        spend a huge chunk of my life on robotics and machine learning, and overall wrote a bunch of not really useful programs. 
-                        It's fascinating to see how all the topics connect together and such vast knowledge helps to develop new things. 
-                        Currently my interests are skewed towards computer vision and reinforcement learning. 
+                        I was born somewhere in <b>[DELETED]</b> on 6 May 2004. Consequently, I'm <span id="age">18</span> years old. 
+                        I have had some experience with a wide variety of topics: computer aided design,
+                        table tennis, embedded software, Minecraft, UI/UX design, Skyrim and control theory. 
+                        Currently my interests are skewed toward computer vision and reinforcement learning. 
                         <br><br>
                         I enjoy to talk and attempt to solve unsolvable problems, so if you have any of these don't hesitate and send an email.
                     </div>
@@ -47,5 +46,7 @@
                 <p>An arbitrary handsome guy</p>
             </div>
         </div>
+
+        <script src="../scripts/about.js" defer></script>
     </body>
 </html>
