Complete the css structure and add the education page

--- a/html/projects.html
+++ b/html/projects.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Viga">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee">
         <link rel="stylesheet" type="text/css" href="../styles/styles.css">
+        <link rel="stylesheet" type="text/css" href="../styles/mobile.css">
         <link rel="stylesheet" type="text/css" href="../styles/projects.css">
         <link rel="stylesheet" type="text/css" href="../styles/nojs.css" id="nojs">
         
