--- a/html/about.html
+++ b/html/about.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Viga">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee">
         <link rel="stylesheet" type="text/css" href="../styles/styles.css">
+        <link rel="stylesheet" type="text/css" href="../styles/mobile.css">
         <link rel="stylesheet" type="text/css" href="../styles/index.css">
         <link rel="stylesheet" type="text/css" href="../styles/about.css">
         
