--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="link-text">Projects</div>
                 </a>
 
-                <a class="link edu" target="_self" href="html/projects.html">
+                <a class="link edu" target="_self" href="html/education.html">
 
                     <svg width="68px" height="68px" viewBox="0 0 68 68" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
                         <g class="Group" transform="translate(2 2)">
@@ -63,7 +63,7 @@
                         </g>
                     </svg>
 
-                    <div class="link-text">Education</div>
+                    <div class="link-text">Studies & work</div>
                 </a>
 
                 <a class="link about" target="_self" href="html/about.html">
