Replace my photo with my svg avatar

--- a/html/about.html
+++ b/html/about.html
@@ -43,8 +43,7 @@
             </div>
 
             <div class="me">
-                <img src="../images/me.jpg" alt="A photo of a handsome guy in front of a waterfall" loading="lazy"/>
-                <p>An arbitrary handsome guy</p>
+                <img src="../images/me.svg" alt="A photo of a handsome guy in front of a waterfall" loading="lazy"/>
             </div>
         </div>
 
