--- a/html/education.html
+++ b/html/education.html
@@ -23,6 +23,18 @@
         </header>
         <div class="header">Studies & work</div>
         <div class="container">
+            <div class="event" style="--from: 14; --to: 21.5; --level: 3; --index: 2; --h: -0.35;">
+                <div class="period"></div>
+                <div class="connector"></div>
+                <div class="cell">
+                    <p class="header">Robotics studies</p>
+                    <p class="text">
+                        I've been studing basic robotics and passing various courses in my school Robotics Centre. <br>
+                        <b>1st place on national level Robocup 3 times.</b>
+                    </p>
+                </div>
+            </div>
+
             <div class="event" style="--from: 15.5; --to: 22.5; --level: 1; --index: 1; --h: 0.3;">
                 <div class="period"></div>
                 <div class="connector"></div>
@@ -47,18 +59,6 @@
                     </p>
                 </div>
             </div>
-                
-            <div class="event" style="--from: 14; --to: 21.5; --level: 3; --index: 2; --h: -0.35;">
-                <div class="period"></div>
-                <div class="connector"></div>
-                <div class="cell">
-                    <p class="header">Robotics studies</p>
-                    <p class="text">
-                        I've been studing basic robotics and passing various courses in my school Robotics Centre. <br>
-                        <b>1st place on national level Robocup 3 times.</b>
-                    </p>
-                </div>
-            </div>
             
             <div class="event" style="--from: 17.7; --to: 18.4; --level: 4; --index: 1; --h: -0.4;">
                 <div class="period"></div>
@@ -66,7 +66,7 @@
                 <div class="cell">
                     <p class="header">JSEcoin</p>
                     <p class="text">
-                        Was working closely with the developers of JSEcoin, optimized the critical code, found and fixed a bunch of bugs. Received ~200$ for work.
+                        Was working closely with the developers of JSEcoin, optimized the critical code, found and fixed a bunch of bugs.
                     </p>
                 </div>
             </div>
