Finalize the education page

--- a/html/education.html
+++ b/html/education.html
@@ -23,6 +23,14 @@
         </header>
         <div class="header">Studies & work</div>
         <div class="container">
+            <div class="timeline">
+                <p class="first">2015</p>
+                <p>2017</p>
+                <p>2019</p>
+                <p>2021</p>
+                <p>2023</p>
+            </div>
+
             <div class="event" style="--from: 14; --to: 21.5; --level: 3; --index: 2; --h: -0.35;">
                 <div class="period"></div>
                 <div class="connector"></div>
