Make linking better

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="links-wrapper">
-                <a class="link projects" target="_self" href="html/projects.html">
+                <a class="link projects" target="_self" href="pages/projects.html">
                     
                     <svg width="68px" height="68px" viewBox="0 0 68 68" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
                         <g transform="translate(2 2)">
@@ -54,7 +54,7 @@
                     <div class="link-text">Projects</div>
                 </a>
 
-                <a class="link edu" target="_self" href="html/education.html">
+                <a class="link edu" target="_self" href="pages/education.html">
 
                     <svg width="68px" height="68px" viewBox="0 0 68 68" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
                         <g class="Group" transform="translate(2 2)">
@@ -67,7 +67,7 @@
                     <div class="link-text">Studies & work</div>
                 </a>
 
-                <a class="link about" target="_self" href="html/about.html">
+                <a class="link about" target="_self" href="pages/about.html">
 
                     <svg width="68px" height="68px" viewBox="0 0 68 68" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
                         <g class="Group" transform="translate(2 2)">
