--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@
     <body class="preload">
         <div class="loading-screen"></div>
         <header>
-            <a class="text" target="_self" href="../index.html">
+            <a class="text" target="_self" href="../">
                 knyaz.tech
             </a>
         </header>
