--- a/pages/projects.html
+++ b/pages/projects.html
@@ -31,7 +31,7 @@
         </a>
 
         <header>
-            <a class="text" target="_self" href="../index.html">
+            <a class="text" target="_self" href="../">
                 knyaz.tech
             </a>
         </header>
