Transfer to webp

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -87,7 +87,7 @@
             </div>
 
             <div class="pic-wrapper">
-                <img src="../images/robocup.png">
+                <img src="../images/robocup.webp" loading="lazy"> <!--Using https://squoosh.app/-->
             </div>
         </div>
 
@@ -135,7 +135,7 @@
             </div>
 
             <div class="pic-wrapper">
-                <img src="../images/silver.png" loading="lazy">
+                <img src="../images/silver.webp" loading="lazy"> <!--Using https://squoosh.app/-->
             </div>
         </div>
 
