Design global fix

--- a/pages/education.html
+++ b/pages/education.html
@@ -17,7 +17,7 @@
     <body class="preload">
         <div class="loading-screen"></div>
         <header>
-            <a class="text" target="_self" href="../">
+            <a class="text" target="_self" href="../index.html">
                 knyaz.tech
             </a>
         </header>
