--- a/pages/education.html
+++ b/pages/education.html
@@ -31,15 +31,16 @@
                 <p>2023</p>
             </div>
 
-            <div class="event" style="--from: 14; --to: 21.5; --level: 3; --index: 2; --h: -0.35;">
+            <div class="event" style="--from: 13.6; --to: 21.3; --level: 3; --index: 2; --h: -0.25;">
                 <div class="period"></div>
                 <div class="connector"></div>
                 <div class="cell">
-                    <p class="header">Robotics studies</p>
-                    <p class="text">
+                    <div class="header">Robotics studies</div>
+                    <div class="subscript">2015-2021</div>
+                    <div class="text">
                         I've been studing basic robotics and passing various courses in my school Robotics Centre. <br>
                         <b>1st place on national level Robocup 3 times.</b>
-                    </p>
+                    </div>
                 </div>
             </div>
 
@@ -47,12 +48,13 @@
                 <div class="period"></div>
                 <div class="connector"></div>
                 <div class="cell">
-                    <p class="header">High school</p>
-                    <p class="text">
+                    <div class="header">High school</div>
+                    <div class="subscript">2016-2022</div>
+                    <div class="text">
                         I was studying at Physics and Mathematics Lyceum 239 from 5th to 11th grade. 
                         By the time my school was considered to be the best and most complicated school in Russia. <br>
                         <b>GPA: 3.9/5</b>
-                    </p>
+                    </div>
                 </div>
             </div>
                 
@@ -60,11 +62,12 @@
                 <div class="period"></div>
                 <div class="connector"></div>
                 <div class="cell">
-                    <p class="header">A Levels</p>
-                    <p class="text">
+                    <div class="header">A Levels</div>
+                    <div class="subscript">2020-2022</div>
+                    <div class="text">
                         Last 2 years of my school live I've been preparing and passing International Advanced Levels in educational centre LG. <br>
                         <b>A*A*A* in Maths, Further Maths and Physics</b>
-                    </p>
+                    </div>
                 </div>
             </div>
             
@@ -72,33 +75,36 @@
                 <div class="period"></div>
                 <div class="connector"></div>
                 <div class="cell">
-                    <p class="header">JSEcoin</p>
-                    <p class="text">
+                    <div class="header">JSEcoin</div>
+                    <div class="subscript">2018</div>
+                    <div class="text">
                         Was working closely with the developers of JSEcoin, optimized the critical code, found and fixed a bunch of bugs.
-                    </p>
+                    </div>
                 </div>
             </div>
 
-            <div class="event" style="--from: 17.5; --to: 19.5; --level: 2; --index: 3; --h: -0.2;">
+            <div class="event not-important" style="--from: 17.5; --to: 19.5; --level: 2; --index: 3; --h: -0.2;">
                 <div class="period"></div>
                 <div class="connector"></div>
                 <div class="cell">
-                    <p class="header">Astronomy</p>
-                    <p class="text">
+                    <div class="header">Astronomy</div>
+                    <div class="subscript">2018-2020</div>
+                    <div class="text">
                         I've been studing astrophysics and preparing for various olympiads. <br>
                         <b>53rd in country on national astrophysics competition.</b>
-                    </p>
+                    </div>
                 </div>
             </div>
 
-            <div class="event" style="--from: 20.2; --to: 20.8; --level: 4; --index: 2; --h: -0.3;">
+            <div class="event not-important" style="--from: 20.2; --to: 20.8; --level: 4; --index: 2; --h: -0.3;">
                 <div class="period"></div>
                 <div class="connector"></div>
                 <div class="cell">
-                    <p class="header">Internship at Gazprom</p>
-                    <p class="text">
-                        I've spent a few months at non-payed intership at Gazprom, at which I was making a small robotics project with a team.
-                    </p>
+                    <div class="header">Internship at Gazprom</div>
+                    <div class="subscript">2020</div>
+                    <div class="text">
+                        I've spent a few months at non-payed intership at Gazprom, at which I was making a small robotics project with a team of five people.
+                    </div>
                 </div>
             </div>
 
@@ -106,10 +112,11 @@
                 <div class="period"></div>
                 <div class="connector"></div>
                 <div class="cell">
-                    <p class="header">Teaching</p>
-                    <p class="text">
+                    <div class="header">Teaching</div>
+                    <div class="subscript">2021-2022</div>
+                    <div class="text">
                         Worked as a teaching assistant at UAV course and as an only teacher of a ML course.
-                    </p>
+                    </div>
                 </div>
             </div>
 
@@ -117,10 +124,11 @@
                 <div class="period noend"></div>
                 <div class="connector"></div>
                 <div class="cell">
-                    <p class="header">University</p>
-                    <p class="text">
+                    <div class="header">University</div>
+                    <div class="subscript">2022-present</div>
+                    <div class="text">
                         Obtaining bachelor degree of computer science and engineering at TU Delft. At the time of applying university was ranked 10th in engineering in the world.
-                    </p>
+                    </div>
                 </div>
             </div>
         </div>
