--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="intro">
                     <div class="text">
-                        I am developer and robotics programmer focused on eternal knowledge and working at the cutting edge of technology.
+                        I am a developer and robotics programmer focused on eternal knowledge and working at the cutting edge of technology.
                     </div>
                 </div>
             </div>
