--- a/pages/about.html
+++ b/pages/about.html
@@ -32,12 +32,12 @@
                 </div>
                 <div class="intro">
                     <div class="text">
-                        I was born somewhere in <b>[DELETED]</b> on 6 May 2004. Consequently, I'm <span id="age">18</span> years old. 
-                        I have had some experience with a wide variety of topics: computer aided design,
-                        table tennis, embedded software, Minecraft, UI/UX design, Skyrim and control theory. 
-                        Currently my interests are skewed toward computer vision and reinforcement learning. 
+                        I was born somewhere in Saint-Petersburg on 6 May 2004. Consequently, I am <span id="age">18</span> years old. 
+                        I have some experience with a wide variety of topics: computer-aided design, table tennis, 
+                        embedded software, Minecraft, UI/UX design, Skyrim and control theory. Currently, my interests are skewed 
+                        toward computer vision and reinforcement learning. 
                         <br><br>
-                        I enjoy to talk and attempt to solve unsolvable problems, so if you have any of these don't hesitate and send an email.
+                        I enjoy talking and attempting to solve unsolvable problems, so if you have any of these - do not hesitate and send an email.
                     </div>
                 </div>
             </div>
