--- a/pages/education.html
+++ b/pages/education.html
@@ -38,7 +38,7 @@
                     <div class="header">Robotics studies</div>
                     <div class="subscript">2015-2021</div>
                     <div class="text">
-                        I've been studing basic robotics and passing various courses in my school Robotics Centre. <br>
+                        I have been studying basic robotics and passing various courses in my school's Robotics Centre. <br>
                         <b>1st place on national level Robocup 3 times.</b>
                     </div>
                 </div>
@@ -51,9 +51,9 @@
                     <div class="header">High school</div>
                     <div class="subscript">2016-2022</div>
                     <div class="text">
-                        I was studying at Physics and Mathematics Lyceum 239 from 5th to 11th grade. 
-                        By the time my school was considered to be the best and most complicated school in Russia. <br>
-                        <b>GPA: 3.9/5</b>
+                        I was studying at Presidential Physics and Mathematics Lyceum 239 from 5th to 11th grade. 
+                        At the time, my school was considered to be the best and the most complicated in Russia. <br>
+                        <b>GPA: 3.86/5</b>
                     </div>
                 </div>
             </div>
@@ -65,8 +65,8 @@
                     <div class="header">A Levels</div>
                     <div class="subscript">2020-2022</div>
                     <div class="text">
-                        Last 2 years of my school live I've been preparing and passing International Advanced Levels in educational centre LG. <br>
-                        <b>A*A*A* in Maths, Further Maths and Physics</b>
+                        For the last two years of my school life, I have been preparing and passing International Advanced Levels in the educational centre LG. <br>
+                        <b>A*A*A* in Maths, Further Maths and Physics. </b>
                     </div>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                     <div class="header">JSEcoin</div>
                     <div class="subscript">2018</div>
                     <div class="text">
-                        Was working closely with the developers of JSEcoin, optimized the critical code, found and fixed a bunch of bugs.
+                        I was working closely with the developers of JSEcoin, optimized the critical code, found and fixed a bunch of bugs.
                     </div>
                 </div>
             </div>
@@ -90,8 +90,8 @@
                     <div class="header">Astronomy</div>
                     <div class="subscript">2018-2020</div>
                     <div class="text">
-                        I've been studing astrophysics and preparing for various olympiads. <br>
-                        <b>53rd in country on national astrophysics competition.</b>
+                        I have been studying astrophysics and preparing for various olympiads. <br>
+                        <b>53rd in the country at the national astrophysics competition. </b>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <div class="header">Internship at Gazprom</div>
                     <div class="subscript">2020</div>
                     <div class="text">
-                        I've spent a few months at non-payed intership at Gazprom, at which I was making a small robotics project with a team of five people.
+                        I spent a few months at a non-payed internship at Gazprom, where I participated in a small robotics project with a team of five people.
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                     <div class="header">Teaching</div>
                     <div class="subscript">2021-2022</div>
                     <div class="text">
-                        Worked as a teaching assistant at UAV course and as an only teacher of a ML course.
+                        I worked as a teaching assistant at UAV courses and as an only teacher of an ML course.
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     <div class="header">University</div>
                     <div class="subscript">2022-present</div>
                     <div class="text">
-                        Obtaining bachelor degree of computer science and engineering at TU Delft. At the time of applying university was ranked 10th in engineering in the world.
+                        I am obtaining a bachelor's degree in computer science and engineering at TU Delft. At the time, the university was ranked 10th in engineering by QS world ranking.
                     </div>
                 </div>
             </div>
