--- a/pages/projects.html
+++ b/pages/projects.html
@@ -48,12 +48,12 @@
                 </div>
                 <div class="intro">
                     <div class="text">
-                        Robocup is a robotic competition, generally for students, but with several subleagues for juniors. I have participated mainly in 
-                        Robocup Soccer Junior, which is considered to be the most complicated league. 
+                        RoboCup is a robotics competition with a few leagues for juniors. 
+                        I participated mainly in RoboCup Soccer Junior, which is considered to be the most complicated junior league.
                         <ul>
-                            <li>Won 3 national Robocup championships and obtained a "Best software solution" award on Robocup 2019 Sydney. </li>
-                            <li>Leaded a team of 3 students for 2 years, however in all the teams focused on the programming. </li>
-                            <li>Gained experience with STM32 (CMSIS), Arduino, singleboard computers (RPI, Khadas VIM), computer vision and CAD (Autodesk Inventor, SolidWorks). </li>
+                            <li>Won 3 national RoboCup championships and obtained a "Best software solution" award on RoboCup 2019 Sydney. </li>
+                            <li>Led a team of 3 students for two years, though mainly focused on programming. </li>
+                            <li>Gained experience with STM32 (CMSIS), Arduino, single-board computers (RPI, Khadas VIM), computer vision and CAD (Autodesk Inventor, SolidWorks). </li>
                         </ul>
                     </div>
                     <div class="links-local-wrapper">
@@ -104,11 +104,11 @@
                 </div>
                 <div class="intro">
                     <div class="text">
-                        Sign language translator based on time-continious bi-palm latent representations. Comparable with SOTA on AIIJC RSL dataset.
+                        Sign language translator based on time-continuous bi-palm latent representations. Comparable with SOTA on the AIIJC RSL dataset.
                         <ul>
-                            <li>Obtained 2nd place on the Artificial Intelligence International Junior Contest 2021. </li>
-                            <li>Leaded a team of 3 students, supervised the development of GUI. </li>
-                            <li>Gained experience with ML based computer vision techniques and video classification methods. </li>
+                            <li>Obtained 2nd place in the Artificial Intelligence International Junior Contest 2021. </li>
+                            <li>Led a team of 3 students and supervised the development of GUI. </li>
+                            <li>Gained experience with ML-based computer vision techniques and video classification methods. </li>
                         </ul>
                     </div>
                     <div class="links-local-wrapper">
