Attempt to speedup loading

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- These are the default combination of styles. To speedup loading I packed all of them to one file.
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Viga">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee">
         <link rel="stylesheet" type="text/css" href="../styles/styles.css">
         <link rel="stylesheet" type="text/css" href="../styles/mobile.css">
         <link rel="stylesheet" type="text/css" href="../styles/index.css">
         <link rel="stylesheet" type="text/css" href="../styles/about.css">
-        
+        -->
+
+        <link rel="stylesheet" type="text/css" href="../styles/about-whole.css">
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
