--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- These are the default combination of styles. To speedup loading I packed all of them to one file.
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Viga">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee">
         <link rel="stylesheet" type="text/css" href="../styles/styles.css">
         <link rel="stylesheet" type="text/css" href="../styles/mobile.css">
         <link rel="stylesheet" type="text/css" href="../styles/projects.css">
+        !-->
+
+        <link rel="stylesheet" type="text/css" href="../styles/projects-whole.css">
         <link rel="stylesheet" type="text/css" href="../styles/nojs.css" id="nojs">
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
