Update email address

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         Roman Knyazhitskiy
                     </div>
                     <div class="mail">
-                        mail@knyaz.tech
+                        knyaz.tech@gmail.com
                     </div>
                 </div>
                 <div class="intro">
