--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee">
         <link rel="stylesheet" type="text/css" href="../styles/styles.css">
         <link rel="stylesheet" type="text/css" href="../styles/mobile.css">
-        <link rel="stylesheet" type="text/css" href="../styles/index.css">
         <link rel="stylesheet" type="text/css" href="../styles/about.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,18 +31,26 @@
                 </div>
                 <div class="intro">
                     <div class="text">
-                        I was born somewhere in Saint-Petersburg on 6 May 2004. Consequently, I am <span id="age">18</span> years old. 
-                        I have some experience with a wide variety of topics: computer-aided design, table tennis, 
-                        embedded software, Minecraft, UI/UX design, Skyrim and control theory. Currently, my interests are skewed 
-                        toward computer vision and reinforcement learning. 
+                        I am <span id="age">18</span>.
                         <br><br>
-                        I enjoy talking and attempting to solve unsolvable problems, so if you have any of these - do not hesitate and send an email.
+                        I have experience with a lot of diverse topics, but mainly:
+                        <ul>
+                            <li>embedded software development</li> 
+                            <li>computer vision</li>
+                            <li>web design</li>
+                            <li>machine learning</li> 
+                            <li>software architecture</li>
+                        </ul>
+
+                        I practiced supervising and leading small teams of students for a few years. 
+                        <br><br>
+                        I am studying at TU Delft university, so I am only available for part-time jobs.
                     </div>
                 </div>
             </div>
 
             <div class="me">
-                <img src="../images/me.svg" alt="A photo of a handsome guy in front of a waterfall" loading="lazy"/>
+                <img src="../images/me.jpg" alt="A photo of a handsome guy in front of a waterfall" loading="lazy"/>
             </div>
         </div>
 
