--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
         <link rel="stylesheet" type="text/css" href="styles/nojs.css" id="nojs">
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="description" content="Roman Knyazhitskiy (Knyaz) personal website.">
+        <meta name="keywords" content="Knyazhitskiy, knyazhitskiy, Roman Knyazhitskiy">
 
         <base target="_blank">
 
         <title>Knyaz website</title>
-        <link rel="shortcut icon" type="image/png" href="misc/favicon.png"/>
+        <link rel="shortcut icon" type="image/png" href="misc/favicon.png">
     </head>
     <body class="preload">
         <div class="loading-screen"></div>
