Make mail clickable

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                     <div class="name">
                         Roman Knyazhitskiy
                     </div>
-                    <div class="mail">
+                    <a href="mailto:mail@knyaz.tech" class="mail" tabindex="-1">
                         mail@knyaz.tech
-                    </div>
+                    </a>
                 </div>
                 <div class="intro">
                     <div class="text">
