--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <base target="_blank">
 
         <title>Knyaz website</title>
-        <link rel="shortcut icon" type="image/svg" href="misc/favicon.svg">
+        <link rel="shortcut icon" type="image/x-icon" href="misc/favicon.svg">
     </head>
     <body class="preload">
         <div class="loading-screen"></div>
