--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
         <base target="_blank">
 
         <title>Knyaz website</title>
-        <link rel="shortcut icon" type="image/svg" href="../misc/favicon.svg"/>
+        <link rel="shortcut icon" type="image/x-icon" href="../misc/favicon.svg"/>
     </head>
     <body class="preload">
         <div class="loading-screen"></div>
