Update with SOTA info

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="intro">
                     <div class="text">
-                        I am a developer and robotics programmer focused on eternal knowledge and working at the cutting edge of technology.
+			    Science is more art than science
                     </div>
                 </div>
             </div>
