--- a/pages/about.html
+++ b/pages/about.html
@@ -26,25 +26,22 @@
             <div class="text-wrapper">
                 <div class="name-wrapper">
                     <div class="name">
-                        About me
                     </div>
                 </div>
                 <div class="intro">
                     <div class="text">
-                        I am <span id="age">18</span>.
-                        <br><br>
-                        I have experience with a lot of diverse topics, but mainly:
-                        <ul>
-                            <li>embedded software development</li> 
-                            <li>computer vision</li>
-                            <li>web design</li>
-                            <li>machine learning</li> 
-                            <li>software architecture</li>
-                        </ul>
+			<ul>
+				<li>Head of AI at Delft Mercurians</li>
+				<br>
+				<li>Studying at TU Delft</li>
+				<br>
+				<li>Contributing to some open-source, e.g. <a href='https://github.com/google/jaxtyping'>jaxtyping</a></li>
+				<br>
+				<li>Building <a href='https://github.com/DelftMercurians/cotix'>cotix</a> - continuous-time, differentiable RL environments in JAX</li>
+				<br>
+				<li>I like cats 🐱</li>
+			</ul>
 
-                        I practiced supervising and leading small teams of students for a few years. 
-                        <br><br>
-                        I am studying at TU Delft university, so I am only available for part-time jobs.
                     </div>
                 </div>
             </div>
